Create model training endpoints
Created enpoints for scheduling model training and getting training
results.
Configured celery to run tasks in background.

Signed-off-by: Valentin Yadykin <valentin.yadykin@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,8 @@ pyrightconfig.json
 
 # Directory for developer's local scripts and other files
 .local_dev/
+
+# Docker compose volumes
+config/
+rabbitmq/
+var/
