--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 fastapi==0.101.0
 fastparquet==2023.7.0
+sqlalchemy==2.0.19
+psycopg2-binary==2.9.6
 loguru==0.7.0
 numba==0.57.1
 numpy==1.24.4
@@ -10,3 +12,4 @@ pydantic_core==2.4.0
 python-dotenv==1.0.0
 torch==2.0.1
 uvicorn==0.23.2
+celery==5.3.1
